# notspot_sim_py

./: LICENSE  README.md
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin
resources/: notspot_render  notspot_render2  notspot_render3  notspot_render_new1  notspot_render_new2
src/notspot/: CMakeLists.txt  package.xml
src/notspot/launch/: run_robot_gazebo.launch
src/notspot_controller/: CMakeLists.txt  package.xml
src/notspot_controller/launch/: robot_controller.launch
src/notspot_controller/scripts/: robot_controller_gazebo.py
src/notspot_controller/scripts/InverseKinematics/: robot_IK.py
src/notspot_controller/scripts/RobotController/: CrawlGaitController.py  GaitController.py  PIDController.py  RestController.py  RobotController.py  StandController.py  StateCommand.py  TrotGaitController.py
src/notspot_controller/scripts/RoboticsUtilities/: Transformations.py
src/notspot_controller/scripts/Utilities/: Transformations.py
src/notspot_description/: CMakeLists.txt  package.xml
src/notspot_description/launch/: notspot_rviz.rviz
src/notspot_description/meshes/: R3_obj.mtl  body_obj.mtl
src/notspot_description/urdf/: notspot.urdf
src/notspot_gazebo/: CMakeLists.txt  package.xml
src/notspot_gazebo/config/: controllers.yaml
src/notspot_gazebo/launch/: simulation.launch
src/notspot_joystick/: CMakeLists.txt  package.xml
src/notspot_joystick/launch/: ramped_joystick.launch
src/notspot_joystick/scripts/: ramped_joystick.py
src/notspot_joystick/scripts/RampedJoystick/: PS4_controller.py
src/notspot_msgs/: CMakeLists.txt  package.xml
src/notspot_msgs/msg/: JointAngles.msg
