<?xml version="1.0"?>
<package format="2">
  <name>notspot_gazebo</name>
  <version>1.0.0</version>
  <description>The notspot_gazebo package</description>

  <maintainer email="jakub.jon@pslib.cz">Jakub Jon</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
