<?xml version="1.0"?>
<package format="2">
  <name>notspot_joystick</name>
  <version>1.0.0</version>
  <description>The notspot_joystick package</description>

  <maintainer email="jakub.jon@pslib.cz">Jakub Jon</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
